<resources>
    <string name="app_name">StatisticsCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="default_atributo">1</string>
    <string name="label_atributo">Atributo</string>
    <string name="label_dados">Cant. Dados</string>
    <string name="label_explosion">Explosión</string>
    <string name="label_aplica_explosion">¿Aplica?</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="marcasD6">"     1                                2                               3                                4                                5"</string>
    <string name="marcasD8">"     1                     2                    3                    4                    5                     6                    7"</string>
    <string name="marcasD10">"     1              2               3               4               5               6              7               8              9"</string>
    <string name="marcasD12">"     1            2           3           4           5            6           7           8           9           10         11"</string>
    <string name="marcasD20">"     1     2     3     4     5     6     7     8     9   10   11  12   13  14   15   16  17   18   19   20"</string>
    <string name="boton_tirar">¡Tirar!</string>
    <string name="label_maximo">Máximo:</string>
    <string name="label_minimo">Mínimo:</string>
    <string name="label_promedio">Promedio:</string>
    <string name="boton_d6">D6</string>
    <string name="boton_d8">D8</string>
    <string name="boton_d10">D10</string>
    <string name="boton_d12">D12</string>
    <string name="boton_d20">D20</string>
    <string name="label_prob_emboque">P. Emboque:</string>
    <string name="boton_lineas">Lineas</string>
    <string name="boton_pastel">Pastel</string>
</resources>
