<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="otaking.com.statisticscalculator.activities.ResultsActivity">

    <TextView
        android:id="@+id/textViewLabelPromedio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_promedio"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabelMaximo" />

    <TextView
        android:id="@+id/textViewValorPromedio"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/textViewLabelPromedio"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabelMinimo" />

    <TextView
        android:id="@+id/textViewLabelMinimo"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_minimo"
        android:textSize="18sp"
        app:layout_constraintRight_toLeftOf="@+id/textViewValorMinimo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewValorMinimo"
        android:layout_width="100dp"
        android:layout_height="22dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewLabelMaximo"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_maximo"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/textViewValorMaximo"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textViewValorMaximo"
        android:layout_width="80dp"
        android:layout_height="22dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        app:layout_constraintRight_toLeftOf="@+id/textViewLabelMinimo"
        app:layout_constraintTop_toTopOf="parent" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chartLineas"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewValorPromedio"
        app:layout_constraintVertical_bias="0.0" />

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/chartPastel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewValorPromedio"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonLineas"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:onClick="graficoLineas"
        android:text="@string/boton_lineas"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewValorPromedio"
        app:layout_constraintLeft_toRightOf="@+id/textViewValorPromedio" />

    <Button
        android:id="@+id/buttonPastel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:onClick="graficoPastel"
        android:text="@string/boton_pastel"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewValorPromedio"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/buttonLineas"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
